DEVELOPER-3417 Fixed angular binding to prevent code flickering

--- a/stylesheets/_paginator.scss
+++ b/stylesheets/_paginator.scss
@@ -31,6 +31,7 @@
         padding-top: 0.6em;
         transition: none;
         cursor: pointer;
+        min-height: 36.39px;
         &:hover, &:focus{
           color: #005582 !important;
           background: #eee;
